# programming_of_dynamic_data_structures

./: .gitignore  CMakeLists.txt  README.md
base_class/: BaseClass.cpp  BaseClass.h
course_work_queue/: SetLabQueue.cpp  SetLabQueue.h  defines.cpp  defines.h  main.cpp
lab_1/: lab_1_6.cpp  lab_1_6.h  main.cpp
lab_2/: defines.h  lab_2_6.cpp  lab_2_6.h  main.cpp
lab_3/: defines.h  main.cpp  set_lab_3.cpp  set_lab_3.h
lab_4/: SetLab4.cpp  SetLab4.h  main.cpp
lab_5/: SetLab5.cpp  SetLab5.h  main.cpp
lab_6/: benchmarks.cpp  benchmarks.h  main.cpp  string_utils.cpp  string_utils.h
lab_6_queue/: SetLabQueue.cpp  SetLabQueue.h  defines.h  main.cpp
lab_7/: main.py
