cmake_minimum_required(VERSION 3.21)
project(programming_of_dynamic_data_structures)

set(CMAKE_CXX_STANDARD 20)
if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 19.12.25835)
    set(CMAKE_CXX20_STANDARD_COMPILE_OPTION "-std:c++latest")
    set(CMAKE_CXX20_EXTENSION_COMPILE_OPTION "-std:c++latest")
endif()

add_executable(lab_1  lab_1/main.cpp lab_1/lab_1_6.h lab_1/lab_1_6.cpp lab_1/defines.h)
add_executable(lab_2  lab_2/main.cpp lab_2/lab_2_6.h lab_2/lab_2_6.cpp lab_2/defines.h)
add_executable(lab_3  lab_3/main.cpp lab_3/set_lab_3.cpp lab_3/defines.h lab_3/set_lab_3.h)
add_executable(lab_4  lab_4/main.cpp lab_4/SetLab4.cpp lab_4/SetLab4.h)
add_executable(lab_5  lab_5/main.cpp lab_5/SetLab5.cpp lab_5/SetLab5.h)
add_executable(lab_6 course_work_queue/main.cpp course_work_queue/SetLabQueue.cpp course_work_queue/SetLabQueue.h course_work_queue/defines.h course_work_queue/defines.cpp)
# add_executable(Ilya_lab_1 lab_1/lab_1_6.h)
